Fix scrollbar de la dialog

--- a/src/app/components/dialog.component.scss
+++ b/src/app/components/dialog.component.scss
@@ -1,9 +1,4 @@
 :host {
-    display: block;
-    margin: 0 15px 10px;
-}
-
-:host {
     display: none;
     position: fixed;
     height: 100%;
@@ -18,25 +13,33 @@
     &.open {
         display: flex;
     }
+}
 
-    .content {
-        position: relative;
-        background-color: #fff;
-        height: 90%;
-        width: 70%;
-        box-shadow: 0 0 5px 5px #0003;
-    }
-    .close {
-        background: white;
-        height: 30px;
-        width: 30px;
-        text-align: center;
-        line-height: 30px;
-        border-radius: 5px;
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        box-shadow: 0 0 2px;
-        cursor: pointer;
-    }
+.content {
+    display: flex;
+    position: relative;
+    background-color: #fff;
+    min-height: 50%;
+    max-height: 90%;
+    min-width: 50%;
+    max-width: 90%;
+    box-shadow: 0 0 5px 5px #0003;
+}
+.close {
+    background: white;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 5px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    box-shadow: 0 0 2px;
+    cursor: pointer;
+}
+
+.main {
+    overflow: auto;
+    scrollbar-gutter: stable;
 }
